[project]
name = "voice-pipeline"
version = "0.1.1"
description = "Fully local voice pipeline: ASR (faster-whisper) + LLM (llama.cpp) + TTS (supertonic)"
authors = [{ name = "AmxnCode" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "soundfile>=0.12",
    "huggingface-hub>=0.23",
]

[project.optional-dependencies]
asr = ["faster-whisper>=1.1", "scipy>=1.10"]
llm = ["llama-cpp-python>=0.2"]
tts = ["supertonic>=1.3"]
all = [
    "voice-pipeline[asr,llm,tts]",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["voice_pipeline*"]
